第三，四，五周/PA4/ast.output
Grammar

    0 $accept: program $end

    1 program: nothing LINENO PROGRAM class_list
    2        | nothing

    3 nothing: /* empty */

    4 class_list: class
    5           | class_list class

    6 class: LINENO CLASS ID ID STR_CONST '(' optional_feature_list ')'

    7 optional_feature_list: /* empty */
    8                      | feature_list

    9 feature_list: feature
   10             | feature_list feature

   11 feature: LINENO METHOD ID formals ID expr
   12        | LINENO ATTR ID ID expr

   13 formals: /* empty */
   14        | formal_list

   15 formal_list: formal
   16            | formal_list formal

   17 formal: LINENO FORMAL ID ID

   18 expr: expr_aux ':' ID
   19     | expr_aux ':' NO_TYPE

   20 expr_aux: LINENO ASSIGN ID expr
   21         | LINENO STATIC_DISPATCH expr ID ID actuals
   22         | LINENO DISPATCH expr ID actuals
   23         | LINENO COND expr expr expr
   24         | LINENO LOOP expr expr
   25         | LINENO BLOCK expr_list
   26         | LINENO LET ID ID expr expr
   27         | LINENO TYPCASE expr case_list
   28         | LINENO NEW ID
   29         | LINENO ISVOID expr
   30         | LINENO PLUS expr expr
   31         | LINENO SUB expr expr
   32         | LINENO MUL expr expr
   33         | LINENO DIVIDE expr expr
   34         | LINENO NEG expr
   35         | LINENO LT expr expr
   36         | LINENO EQ expr expr
   37         | LINENO LEQ expr expr
   38         | LINENO COMP expr
   39         | LINENO INT INT_CONST
   40         | LINENO STR STR_CONST
   41         | LINENO BOOL INT_CONST
   42         | LINENO OBJECT ID
   43         | LINENO NO_EXPR

   44 actuals: '(' ')'
   45        | '(' expr_list ')'

   46 expr_list: expr
   47          | expr_list expr

   48 case_list: simple_case
   49          | case_list simple_case

   50 simple_case: LINENO BRANCH ID ID expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 44 45
')' (41) 6 44 45
':' (58) 18 19
error (256)
PROGRAM (258) 1
CLASS (259) 6
METHOD (260) 11
ATTR (261) 12
FORMAL (262) 17
BRANCH (263) 50
ASSIGN (264) 20
STATIC_DISPATCH (265) 21
DISPATCH (266) 22
COND (267) 23
LOOP (268) 24
TYPCASE (269) 27
BLOCK (270) 25
LET (271) 26
PLUS (272) 30
SUB (273) 31
MUL (274) 32
DIVIDE (275) 33
NEG (276) 34
LT (277) 35
EQ (278) 36
LEQ (279) 37
COMP (280) 38
INT (281) 39
STR (282) 40
BOOL (283) 41
NEW (284) 28
ISVOID (285) 29
NO_EXPR (286) 43
OBJECT (287) 42
NO_TYPE (288) 19
STR_CONST (289) 6 40
INT_CONST (290) 39 41
ID (291) 6 11 12 17 18 20 21 22 26 28 42 50
LINENO (292) 1 6 11 12 17 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40 41 42 43 50


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1 2, on right: 0
nothing (43)
    on left: 3, on right: 1 2
class_list (44)
    on left: 4 5, on right: 1 5
class (45)
    on left: 6, on right: 4 5
optional_feature_list (46)
    on left: 7 8, on right: 6
feature_list (47)
    on left: 9 10, on right: 8 10
feature (48)
    on left: 11 12, on right: 9 10
formals (49)
    on left: 13 14, on right: 11
formal_list (50)
    on left: 15 16, on right: 14 16
formal (51)
    on left: 17, on right: 15 16
expr (52)
    on left: 18 19, on right: 11 12 20 21 22 23 24 26 27 29 30 31 32
    33 34 35 36 37 38 46 47 50
expr_aux (53)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43, on right: 18 19
actuals (54)
    on left: 44 45, on right: 21 22
expr_list (55)
    on left: 46 47, on right: 25 45 47
case_list (56)
    on left: 48 49, on right: 27 49
simple_case (57)
    on left: 50, on right: 48 49


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (nothing)

    program  go to state 1
    nothing  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: nothing . LINENO PROGRAM class_list
    2        | nothing .

    LINENO  shift, and go to state 4

    $default  reduce using rule 2 (program)


state 3

    0 $accept: program $end .

    $default  accept


state 4

    1 program: nothing LINENO . PROGRAM class_list

    PROGRAM  shift, and go to state 5


state 5

    1 program: nothing LINENO PROGRAM . class_list

    LINENO  shift, and go to state 6

    class_list  go to state 7
    class       go to state 8


state 6

    6 class: LINENO . CLASS ID ID STR_CONST '(' optional_feature_list ')'

    CLASS  shift, and go to state 9


state 7

    1 program: nothing LINENO PROGRAM class_list .
    5 class_list: class_list . class

    LINENO  shift, and go to state 6

    $default  reduce using rule 1 (program)

    class  go to state 10


state 8

    4 class_list: class .

    $default  reduce using rule 4 (class_list)


state 9

    6 class: LINENO CLASS . ID ID STR_CONST '(' optional_feature_list ')'

    ID  shift, and go to state 11


state 10

    5 class_list: class_list class .

    $default  reduce using rule 5 (class_list)


state 11

    6 class: LINENO CLASS ID . ID STR_CONST '(' optional_feature_list ')'

    ID  shift, and go to state 12


state 12

    6 class: LINENO CLASS ID ID . STR_CONST '(' optional_feature_list ')'

    STR_CONST  shift, and go to state 13


state 13

    6 class: LINENO CLASS ID ID STR_CONST . '(' optional_feature_list ')'

    '('  shift, and go to state 14


state 14

    6 class: LINENO CLASS ID ID STR_CONST '(' . optional_feature_list ')'

    LINENO  shift, and go to state 15

    $default  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 16
    feature_list           go to state 17
    feature                go to state 18


state 15

   11 feature: LINENO . METHOD ID formals ID expr
   12        | LINENO . ATTR ID ID expr

    METHOD  shift, and go to state 19
    ATTR    shift, and go to state 20


state 16

    6 class: LINENO CLASS ID ID STR_CONST '(' optional_feature_list . ')'

    ')'  shift, and go to state 21


state 17

    8 optional_feature_list: feature_list .
   10 feature_list: feature_list . feature

    LINENO  shift, and go to state 15

    $default  reduce using rule 8 (optional_feature_list)

    feature  go to state 22


state 18

    9 feature_list: feature .

    $default  reduce using rule 9 (feature_list)


state 19

   11 feature: LINENO METHOD . ID formals ID expr

    ID  shift, and go to state 23


state 20

   12 feature: LINENO ATTR . ID ID expr

    ID  shift, and go to state 24


state 21

    6 class: LINENO CLASS ID ID STR_CONST '(' optional_feature_list ')' .

    $default  reduce using rule 6 (class)


state 22

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


state 23

   11 feature: LINENO METHOD ID . formals ID expr

    LINENO  shift, and go to state 25

    $default  reduce using rule 13 (formals)

    formals      go to state 26
    formal_list  go to state 27
    formal       go to state 28


state 24

   12 feature: LINENO ATTR ID . ID expr

    ID  shift, and go to state 29


state 25

   17 formal: LINENO . FORMAL ID ID

    FORMAL  shift, and go to state 30


state 26

   11 feature: LINENO METHOD ID formals . ID expr

    ID  shift, and go to state 31


state 27

   14 formals: formal_list .
   16 formal_list: formal_list . formal

    LINENO  shift, and go to state 25

    $default  reduce using rule 14 (formals)

    formal  go to state 32


state 28

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 29

   12 feature: LINENO ATTR ID ID . expr

    LINENO  shift, and go to state 33

    expr      go to state 34
    expr_aux  go to state 35


state 30

   17 formal: LINENO FORMAL . ID ID

    ID  shift, and go to state 36


state 31

   11 feature: LINENO METHOD ID formals ID . expr

    LINENO  shift, and go to state 33

    expr      go to state 37
    expr_aux  go to state 35


state 32

   16 formal_list: formal_list formal .

    $default  reduce using rule 16 (formal_list)


state 33

   20 expr_aux: LINENO . ASSIGN ID expr
   21         | LINENO . STATIC_DISPATCH expr ID ID actuals
   22         | LINENO . DISPATCH expr ID actuals
   23         | LINENO . COND expr expr expr
   24         | LINENO . LOOP expr expr
   25         | LINENO . BLOCK expr_list
   26         | LINENO . LET ID ID expr expr
   27         | LINENO . TYPCASE expr case_list
   28         | LINENO . NEW ID
   29         | LINENO . ISVOID expr
   30         | LINENO . PLUS expr expr
   31         | LINENO . SUB expr expr
   32         | LINENO . MUL expr expr
   33         | LINENO . DIVIDE expr expr
   34         | LINENO . NEG expr
   35         | LINENO . LT expr expr
   36         | LINENO . EQ expr expr
   37         | LINENO . LEQ expr expr
   38         | LINENO . COMP expr
   39         | LINENO . INT INT_CONST
   40         | LINENO . STR STR_CONST
   41         | LINENO . BOOL INT_CONST
   42         | LINENO . OBJECT ID
   43         | LINENO . NO_EXPR

    ASSIGN           shift, and go to state 38
    STATIC_DISPATCH  shift, and go to state 39
    DISPATCH         shift, and go to state 40
    COND             shift, and go to state 41
    LOOP             shift, and go to state 42
    TYPCASE          shift, and go to state 43
    BLOCK            shift, and go to state 44
    LET              shift, and go to state 45
    PLUS             shift, and go to state 46
    SUB              shift, and go to state 47
    MUL              shift, and go to state 48
    DIVIDE           shift, and go to state 49
    NEG              shift, and go to state 50
    LT               shift, and go to state 51
    EQ               shift, and go to state 52
    LEQ              shift, and go to state 53
    COMP             shift, and go to state 54
    INT              shift, and go to state 55
    STR              shift, and go to state 56
    BOOL             shift, and go to state 57
    NEW              shift, and go to state 58
    ISVOID           shift, and go to state 59
    NO_EXPR          shift, and go to state 60
    OBJECT           shift, and go to state 61


state 34

   12 feature: LINENO ATTR ID ID expr .

    $default  reduce using rule 12 (feature)


state 35

   18 expr: expr_aux . ':' ID
   19     | expr_aux . ':' NO_TYPE

    ':'  shift, and go to state 62


state 36

   17 formal: LINENO FORMAL ID . ID

    ID  shift, and go to state 63


state 37

   11 feature: LINENO METHOD ID formals ID expr .

    $default  reduce using rule 11 (feature)


state 38

   20 expr_aux: LINENO ASSIGN . ID expr

    ID  shift, and go to state 64


state 39

   21 expr_aux: LINENO STATIC_DISPATCH . expr ID ID actuals

    LINENO  shift, and go to state 33

    expr      go to state 65
    expr_aux  go to state 35


state 40

   22 expr_aux: LINENO DISPATCH . expr ID actuals

    LINENO  shift, and go to state 33

    expr      go to state 66
    expr_aux  go to state 35


state 41

   23 expr_aux: LINENO COND . expr expr expr

    LINENO  shift, and go to state 33

    expr      go to state 67
    expr_aux  go to state 35


state 42

   24 expr_aux: LINENO LOOP . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 68
    expr_aux  go to state 35


state 43

   27 expr_aux: LINENO TYPCASE . expr case_list

    LINENO  shift, and go to state 33

    expr      go to state 69
    expr_aux  go to state 35


state 44

   25 expr_aux: LINENO BLOCK . expr_list

    LINENO  shift, and go to state 33

    expr       go to state 70
    expr_aux   go to state 35
    expr_list  go to state 71


state 45

   26 expr_aux: LINENO LET . ID ID expr expr

    ID  shift, and go to state 72


state 46

   30 expr_aux: LINENO PLUS . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 73
    expr_aux  go to state 35


state 47

   31 expr_aux: LINENO SUB . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 74
    expr_aux  go to state 35


state 48

   32 expr_aux: LINENO MUL . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 75
    expr_aux  go to state 35


state 49

   33 expr_aux: LINENO DIVIDE . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 76
    expr_aux  go to state 35


state 50

   34 expr_aux: LINENO NEG . expr

    LINENO  shift, and go to state 33

    expr      go to state 77
    expr_aux  go to state 35


state 51

   35 expr_aux: LINENO LT . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 78
    expr_aux  go to state 35


state 52

   36 expr_aux: LINENO EQ . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 79
    expr_aux  go to state 35


state 53

   37 expr_aux: LINENO LEQ . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 80
    expr_aux  go to state 35


state 54

   38 expr_aux: LINENO COMP . expr

    LINENO  shift, and go to state 33

    expr      go to state 81
    expr_aux  go to state 35


state 55

   39 expr_aux: LINENO INT . INT_CONST

    INT_CONST  shift, and go to state 82


state 56

   40 expr_aux: LINENO STR . STR_CONST

    STR_CONST  shift, and go to state 83


state 57

   41 expr_aux: LINENO BOOL . INT_CONST

    INT_CONST  shift, and go to state 84


state 58

   28 expr_aux: LINENO NEW . ID

    ID  shift, and go to state 85


state 59

   29 expr_aux: LINENO ISVOID . expr

    LINENO  shift, and go to state 33

    expr      go to state 86
    expr_aux  go to state 35


state 60

   43 expr_aux: LINENO NO_EXPR .

    $default  reduce using rule 43 (expr_aux)


state 61

   42 expr_aux: LINENO OBJECT . ID

    ID  shift, and go to state 87


state 62

   18 expr: expr_aux ':' . ID
   19     | expr_aux ':' . NO_TYPE

    NO_TYPE  shift, and go to state 88
    ID       shift, and go to state 89


state 63

   17 formal: LINENO FORMAL ID ID .

    $default  reduce using rule 17 (formal)


state 64

   20 expr_aux: LINENO ASSIGN ID . expr

    LINENO  shift, and go to state 33

    expr      go to state 90
    expr_aux  go to state 35


state 65

   21 expr_aux: LINENO STATIC_DISPATCH expr . ID ID actuals

    ID  shift, and go to state 91


state 66

   22 expr_aux: LINENO DISPATCH expr . ID actuals

    ID  shift, and go to state 92


state 67

   23 expr_aux: LINENO COND expr . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 93
    expr_aux  go to state 35


state 68

   24 expr_aux: LINENO LOOP expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 94
    expr_aux  go to state 35


state 69

   27 expr_aux: LINENO TYPCASE expr . case_list

    LINENO  shift, and go to state 95

    case_list    go to state 96
    simple_case  go to state 97


state 70

   46 expr_list: expr .

    $default  reduce using rule 46 (expr_list)


state 71

   25 expr_aux: LINENO BLOCK expr_list .
   47 expr_list: expr_list . expr

    LINENO  shift, and go to state 33

    $default  reduce using rule 25 (expr_aux)

    expr      go to state 98
    expr_aux  go to state 35


state 72

   26 expr_aux: LINENO LET ID . ID expr expr

    ID  shift, and go to state 99


state 73

   30 expr_aux: LINENO PLUS expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 100
    expr_aux  go to state 35


state 74

   31 expr_aux: LINENO SUB expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 101
    expr_aux  go to state 35


state 75

   32 expr_aux: LINENO MUL expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 102
    expr_aux  go to state 35


state 76

   33 expr_aux: LINENO DIVIDE expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 103
    expr_aux  go to state 35


state 77

   34 expr_aux: LINENO NEG expr .

    $default  reduce using rule 34 (expr_aux)


state 78

   35 expr_aux: LINENO LT expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 104
    expr_aux  go to state 35


state 79

   36 expr_aux: LINENO EQ expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 105
    expr_aux  go to state 35


state 80

   37 expr_aux: LINENO LEQ expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 106
    expr_aux  go to state 35


state 81

   38 expr_aux: LINENO COMP expr .

    $default  reduce using rule 38 (expr_aux)


state 82

   39 expr_aux: LINENO INT INT_CONST .

    $default  reduce using rule 39 (expr_aux)


state 83

   40 expr_aux: LINENO STR STR_CONST .

    $default  reduce using rule 40 (expr_aux)


state 84

   41 expr_aux: LINENO BOOL INT_CONST .

    $default  reduce using rule 41 (expr_aux)


state 85

   28 expr_aux: LINENO NEW ID .

    $default  reduce using rule 28 (expr_aux)


state 86

   29 expr_aux: LINENO ISVOID expr .

    $default  reduce using rule 29 (expr_aux)


state 87

   42 expr_aux: LINENO OBJECT ID .

    $default  reduce using rule 42 (expr_aux)


state 88

   19 expr: expr_aux ':' NO_TYPE .

    $default  reduce using rule 19 (expr)


state 89

   18 expr: expr_aux ':' ID .

    $default  reduce using rule 18 (expr)


state 90

   20 expr_aux: LINENO ASSIGN ID expr .

    $default  reduce using rule 20 (expr_aux)


state 91

   21 expr_aux: LINENO STATIC_DISPATCH expr ID . ID actuals

    ID  shift, and go to state 107


state 92

   22 expr_aux: LINENO DISPATCH expr ID . actuals

    '('  shift, and go to state 108

    actuals  go to state 109


state 93

   23 expr_aux: LINENO COND expr expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 110
    expr_aux  go to state 35


state 94

   24 expr_aux: LINENO LOOP expr expr .

    $default  reduce using rule 24 (expr_aux)


state 95

   50 simple_case: LINENO . BRANCH ID ID expr

    BRANCH  shift, and go to state 111


state 96

   27 expr_aux: LINENO TYPCASE expr case_list .
   49 case_list: case_list . simple_case

    LINENO  shift, and go to state 95

    $default  reduce using rule 27 (expr_aux)

    simple_case  go to state 112


state 97

   48 case_list: simple_case .

    $default  reduce using rule 48 (case_list)


state 98

   47 expr_list: expr_list expr .

    $default  reduce using rule 47 (expr_list)


state 99

   26 expr_aux: LINENO LET ID ID . expr expr

    LINENO  shift, and go to state 33

    expr      go to state 113
    expr_aux  go to state 35


state 100

   30 expr_aux: LINENO PLUS expr expr .

    $default  reduce using rule 30 (expr_aux)


state 101

   31 expr_aux: LINENO SUB expr expr .

    $default  reduce using rule 31 (expr_aux)


state 102

   32 expr_aux: LINENO MUL expr expr .

    $default  reduce using rule 32 (expr_aux)


state 103

   33 expr_aux: LINENO DIVIDE expr expr .

    $default  reduce using rule 33 (expr_aux)


state 104

   35 expr_aux: LINENO LT expr expr .

    $default  reduce using rule 35 (expr_aux)


state 105

   36 expr_aux: LINENO EQ expr expr .

    $default  reduce using rule 36 (expr_aux)


state 106

   37 expr_aux: LINENO LEQ expr expr .

    $default  reduce using rule 37 (expr_aux)


state 107

   21 expr_aux: LINENO STATIC_DISPATCH expr ID ID . actuals

    '('  shift, and go to state 108

    actuals  go to state 114


state 108

   44 actuals: '(' . ')'
   45        | '(' . expr_list ')'

    LINENO  shift, and go to state 33
    ')'     shift, and go to state 115

    expr       go to state 70
    expr_aux   go to state 35
    expr_list  go to state 116


state 109

   22 expr_aux: LINENO DISPATCH expr ID actuals .

    $default  reduce using rule 22 (expr_aux)


state 110

   23 expr_aux: LINENO COND expr expr expr .

    $default  reduce using rule 23 (expr_aux)


state 111

   50 simple_case: LINENO BRANCH . ID ID expr

    ID  shift, and go to state 117


state 112

   49 case_list: case_list simple_case .

    $default  reduce using rule 49 (case_list)


state 113

   26 expr_aux: LINENO LET ID ID expr . expr

    LINENO  shift, and go to state 33

    expr      go to state 118
    expr_aux  go to state 35


state 114

   21 expr_aux: LINENO STATIC_DISPATCH expr ID ID actuals .

    $default  reduce using rule 21 (expr_aux)


state 115

   44 actuals: '(' ')' .

    $default  reduce using rule 44 (actuals)


state 116

   45 actuals: '(' expr_list . ')'
   47 expr_list: expr_list . expr

    LINENO  shift, and go to state 33
    ')'     shift, and go to state 119

    expr      go to state 98
    expr_aux  go to state 35


state 117

   50 simple_case: LINENO BRANCH ID . ID expr

    ID  shift, and go to state 120


state 118

   26 expr_aux: LINENO LET ID ID expr expr .

    $default  reduce using rule 26 (expr_aux)


state 119

   45 actuals: '(' expr_list ')' .

    $default  reduce using rule 45 (actuals)


state 120

   50 simple_case: LINENO BRANCH ID ID . expr

    LINENO  shift, and go to state 33

    expr      go to state 121
    expr_aux  go to state 35


state 121

   50 simple_case: LINENO BRANCH ID ID expr .

    $default  reduce using rule 50 (simple_case)
